--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://webapp-development.herokuapp.com/style.css">
+    <script src="https://webapp-development.herokuapp.com/script.js"></script>
 </head>
 <body>
 
