--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="./style.css" type="text/css"> 
-    <script src="./script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css" type="text/css"> 
+    <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
 
