--- a/index.html
+++ b/index.html
@@ -1,8 +1,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css" type="text/css"> 
-    <script src="script.js" type="text/javascript"></script>
+    <style>
+    body {
+    background: #fffad8;
+}
+
+div.container {
+    border: 1px solid gray;
+    padding: 0 20px;
+}
+
+header, footer {
+    padding: 5px;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+
+section {
+    height: auto;
+    min-height:20vh;
+}
+
+table {
+    margin-left: 270px;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 50%;
+}
+
+tr:first-child {
+    background: #5f5f61;
+    color: #fff;
+}
+
+td,
+th {
+    border: 1px solid green;
+    text-align: left;
+    padding: 8px;
+}
+
+img {
+    position: absolute;
+    width: 300px;
+    height: 320px;
+    left: 300px;
+    top: 100px;
+}
+
+p {
+    color: navy-blue;
+    font-size20px;
+    padding: 20px;
+}
+
+p:first-child {
+    border: 1px solid yellow;
+}
+
+p:nth-child(2) {
+    border: 1px dotted palegreen;
+}
+
+p:nth-child(3) {
+    border: 1px dashed white;
+}
+    </style>
+    <script type="text/javascript">
+    var array1 = ["C", "Php", "SQL"];
+array1.forEach(function (element) {
+    console.log(element);
+});
+
+function printLanguageName(languageName) {
+    alert(languageName);
+}
+
+
+window.addEventListener('load', function () {
+    var employees = [{"name": "Alex", "department": "Marketing"},
+        {"name": "Bob", "department": "Engineering"}];
+
+    for (i = 0; i <= employees.length; i++) {
+        document.getElementById("employee1").innerHTML = "<ul><li>name:" + employees[0].name + '</li><li>department:' + employees[0].department + '</li></ul>';
+        document.getElementById("employee2").innerHTML = "<ul><li>name:" + employees[1].name + '</li><li>department:' + employees[1].department + '</li></ul>';
+    }
+
+
+    var points = [40, 100, 1, 5, 25, 10];
+    points.sort(function(a, b){return b-a});
+    document.getElementById("largest-number").innerHTML = points;
+}, true);
+    </script>
 </head>
 <body>
 
